[gd_scene load_steps=4 format=3 uid="uid://bf8um72gitmnh"]

[ext_resource type="Script" uid="uid://b3f775mnvmnlj" path="res://scripts/minigames/minigame_2.gd" id="1_5ub1h"]
[ext_resource type="PackedScene" uid="uid://c2bi0h58ogcem" path="res://scenes/Minigames/Level_2.tscn" id="2_k5f3f"]
[ext_resource type="PackedScene" uid="uid://dinkb6rvbmkhj" path="res://scenes/helpsys.tscn" id="3_k5f3f"]

[node name="Minigame2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5ub1h")

[node name="Level2" parent="." instance=ExtResource("2_k5f3f")]
layout_mode = 1
offset_left = -5.0
offset_top = 1.0
offset_right = -5.0
offset_bottom = 1.0

[node name="Check_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 922.0
offset_top = 546.0
offset_right = 1070.0
offset_bottom = 577.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
text = "WLAN überprüfen"
flat = true

[node name="ColorRect" type="ColorRect" parent="Check_Button"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.915667, 1, 0.54, 1)

[node name="Helpsys" parent="." instance=ExtResource("3_k5f3f")]
layout_mode = 1
hint_1_text = "Nur 3 Quellen dürfen an sein"
hint_2_text = "zwei Quellen sind jeweils mit zwei Gattern verbunden"
hint_3_text = "Versuche bei \"mindestens eins\" die Quellen an zu schalten die auch mit anderen Gattern verbunden sind"
Timer_hint_2_time = 15.0
Timer_hint_3_time = 60.0

[connection signal="ziel_input_false" from="Level2" to="." method="_on_level_2_ziel_input_false"]
[connection signal="ziel_input_true" from="Level2" to="." method="_on_level_2_ziel_input_true"]
[connection signal="pressed" from="Check_Button" to="." method="_on_check_button_pressed"]
